# UltrAI-Core

./: .babelrc  .bandit  .bandit.yaml  .ci-smoke-trigger  .cursorrc  .deployment-timestamp  .dockerignore  .editorconfig  .env.api_keys  .env.development  .env.example  .env.production  .env.secure  .env.staging  .env.test  .env.testing  .eslintrc.js  .eslintrc.json  .flake8  .gitignore  .gitleaks.toml  .gitleaksignore  .pre-commit-config.yaml  .pylintrc  .replit  .trigger-deploy  .vercelignore  1.txt  111.txt  11111.txt  ACTIVATE_P1_NOW.md  ACTIVE_TASKS.md  AI_COLLABORATION_PROTOCOL.md  AI_COORDINATION.md  AI_COORDINATION_README.md  AI_EDITOR_TASKS.md  BACKGROUND_IMAGE_ANALYSIS.md  CHECK_IMAGES.md  CLAUDE.local.md  CLAUDE.md  (+350 more)
.##Stickies/: functional
backend/: README.md  REFACTORING_PROGRESS.md  __init__.py  app.py  app_minimal.py  config.py  config_cors.py  config_database.py  config_security.py  current_pricing.json  deploy-backend.sh  error_handler.py  fix_imports.py  interactive_pricing.py  main.py  main_new.py  manage_parameters.py  mock_llm_service.py  parameter_glossary_generator.py  performance_test_requirements.txt  pricing_integration.py  pricing_simulator.py  pricing_updater.py  pricing_updater_requirements.txt  pylintrc  pyproject.toml  pytest.ini  quick_estimate.py  realtime_pricing.py  requirements.txt  run.py  setup.cfg  setup.py  start.py  try_pricing_simulator_simple.py  ultra_documents_optimized.py  ultrai_business_model.py  ultrai_pricing_model.py  ultrai_pricing_recommendations_20250402_104234.json  vercel-main.py  (+1 more)
backend/api/: api.py  main.py
backend/app/: database.py  main.py
backend/app/api/: deps.py
backend/app/core/: config.py  exceptions.py  logging.py  security.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  base.py  user.py
backend/backend/integrations/: pattern_orchestrator_integration_fixed.py
backend/cloud/: README.md  main.py  requirements.txt  run_local.sh  vercel.json
backend/cloud/new/: README.md  app.py  vercel.json
backend/config/: .env.production.example  .env.production.template  README.md  __init__.py  gunicorn_conf.py  loader.py  settings.py
backend/core/api/: __init__.py
backend/core/data/: __init__.py
backend/core/frontend/: __init__.py
backend/database/: __init__.py  alembic.ini  base.py  connection.py  fallback.py  fix_imports.sh  memory_db.py  middleware.py  migrate.py  models.py
backend/db/: README.md
backend/decorators/: cache_decorator.py
backend/integrations/: __init__.py  pattern_orchestrator.py  pattern_orchestrator_integration.py  pricing.py
backend/middleware/: __init__.py  api_key_middleware.py  auth_middleware.py  csrf_middleware.py  security_headers_middleware.py  validation_middleware.py
backend/models/: __init__.py  analysis.py  auth.py  base_models.py  document.py  document_analysis.py  enhanced_orchestrator.py  llm_adapter.py  llm_models.py  oauth.py  pricing.py  user.py
backend/parameter_glossary/: parameters.html  parameters.json
backend/pricing_history/: changes_20250402_231408.json  scraped_pricing_20250402_231408.csv
backend/resilience/: __init__.py  llm_client.py  operation_mode.py  queue.py
backend/routes/: analyze_routes.py  auth_routes.py  available_models_routes.py  docker_modelrunner_routes.py  document_analysis_routes.py  document_routes.py  health.py  health_routes.py  imports_analysis.md  llm_routes.py  metrics.py  mvp_dependencies.txt  oauth_routes.py  orchestrator_minimal.py  orchestrator_routes.py  orchestrator_routes_fixed.py  pricing_routes.py  recovery_routes.py  resilient_orchestrator_routes.py  user_routes.py
backend/services/: analysis_service.py  auth_service.py  basic_orchestrator.py  cache_service.py  document_analysis_service.py  document_processor.py  document_service.py  health_service.py  llm_config_service.py  llm_fallback_service.py  llm_service.py  minimal_orchestrator.py  mock_llm_service.py  mock_pricing_service.py  oauth_service.py  parameter_editor.py  parameter_glossary_generator.py  pricing_calculator.py  pricing_simulator.py  pricing_updater.py  prompt_service.py  rate_limit_service.py  resilient_client.py  setup_pricing_updater.sh
backend/tests/: conftest.py  pytest.ini  run_orchestration_tests.py  run_tests.sh  test_analyze_endpoint.py  test_api.py  test_auth_coverage_summary.md  test_auth_edge_cases.py  test_auth_endpoints.py  test_available_models_endpoint.py  test_data.py  test_document_upload.py  test_e2e_analysis_flow.py  test_e2e_auth_workflow.py  test_frontend.py  test_health_endpoint.py  test_health_endpoints.py  test_integration.py  test_jwt_utils.py  test_llm_request_endpoint.py  test_orchestration.py  test_rate_limit_middleware.py  test_rate_limit_service.py  test_user_messages.py
backend/utils/: __init__.py  api_key_manager.py  auth_middleware.py  cache.py  circuit_breaker.py  cookie_security_middleware.py  dependency_manager.py  enhanced_validation.py  error_handler.py  exceptions.py  health_check.py  jwt.py  jwt_wrapper.py  logging.py  logging_config.py  metrics.py  middleware.py  monitoring.py  password.py  performance_middleware.py  rate_limit_middleware.py  rate_limit_service.py  recovery_strategies.py  security_headers_middleware.py  server.py  structured_logging.py  timeout_handler.py  unified_error_handler.py  user_messages.py  validation.py  validation_service.py  wait_for_db.py
(+33582 files in other folders)
