[tool.poetry]
name = "ultra-ai-core"
version = "0.1.0"
description = "Core backend for the UltraAI application."
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = "^0.27.1"
pydantic = "^2.6.3"
starlette = "^0.37.2"
sqlalchemy = "^2.0.27"
alembic = "^1.13.1"
redis = "^6.2.0"
cachetools = "^5.3.3"
cryptography = "^44.0.1"
passlib = "^1.7.4"
python-dotenv = "^1.0.1"
httpx = "^0.27.0"
sentry-sdk = "^1.40.6"
sse-starlette = "^1.8.2"
fastapi-limiter = "^0.1.6"
psycopg2-binary = "^2.9.9"
gunicorn = "^23.0.0"
python-jose = "^3.3.0"
authlib = "^1.3.0"
itsdangerous = "^2.1.2"
email-validator = "^2.1.0.post1"
python-dateutil = "^2.8.2"
orjson = "^3.9.15"
ujson = "^5.9.0"
aiofiles = "^23.2.1"
tenacity = "^8.2.3"
prometheus-client = "^0.20.0"
structlog = "^24.1.0"
setuptools = "^78.1.1"

[tool.poetry.dev-dependencies]
pytest = "^7.3.2"
pytest-asyncio = "^0.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"