[tool.poetry]
name = "ultra"
version = "0.1.0"
description = "UltraAI core backend and tooling"
authors = ["Ultra Contributors <team@ultra.ai>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "*"
uvicorn = "*"
pydantic = "*"
starlette = "^0.40.0"
psutil = "*"
requests = "*"
prometheus-client = "*"
SQLAlchemy = "*"
alembic = "*"
redis = "*"
cachetools = "*"
cryptography = "*"
passlib = "*"
python-dotenv = "*"
httpx = "*"
sentry-sdk = "*"
sse-starlette = "*"
fastapi-limiter = "*"
email-validator = "*"
markdown = "*"
openai = "*"
anthropic = "*"
google-generativeai = "*"
huggingface-hub = "*"
psycopg2-binary = "*"
PyJWT = "*"
aiohttp = "*"
numpy = "*"
pandas = "*"
matplotlib = "*"
pillow = "^11.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-asyncio = "*"
pytest-timeout = "*"
pytest-xdist = "*"
httpx = "*"
pytest-httpx = "*"
requests-mock = "*"
pytest-cov = "*"
coverage = "*"
pytest-mock = "*"
responses = "*"
factory-boy = "*"
faker = "*"
pytest-benchmark = "*"
locust = "*"
pytest-snapshot = "*"
python-dotenv = "*"
pytest-clarity = "*"
pytest-sugar = "*"
pytest-aiohttp = "*"
pytest-postgresql = "*"
sqlalchemy-utils = "*"
black = "*"
isort = "*"
flake8 = "*"
mypy = "*"
pre-commit = "*"
pip-audit = "*"

[build-system]
requires = ["poetry-core>=1.6.0"]
build-backend = "poetry.core.masonry.api"